SUBDIRS = .

AM_CXXFLAGS = -D__STDC_LIMIT_MACROS

AM_CPPFLAGS = \
	-I$(top_srcdir)/source/TIDorbC/orb/include \
	-I$(top_srcdir)/source/TIDThr/tidthr/include \
	-I$(top_srcdir)/source/TIDSocket/tidsocket/include \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/01_orb/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/02_comm/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/03_sending_context/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/04_bidir_policy/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/05_cos_naming/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/06_dynamic_any/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/07_TimeBase/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/08_FT/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/09_PortableGroup/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/10_Messaging/ \
	-I$(top_builddir)/source/TIDorbC/orb/IDL/11_Compression/


lib_LTLIBRARIES = libTIDorb.la

libTIDorb_la_SOURCES = \
	$(srcdir)/types/BigInt.C \
	$(srcdir)/types/WString_SequenceMember.C \
	$(srcdir)/types/String_SequenceMember.C \
	$(srcdir)/portable/RefCounter.C \
	$(srcdir)/templates/templates.C \
	$(srcdir)/core/PolicyFactory.C \
	$(srcdir)/core/ExceptionImpl.C \
	$(srcdir)/core/RequestImpl.C \
	$(srcdir)/core/ServerRequestImpl.C \
	$(srcdir)/core/ProcessingState.C \
	$(srcdir)/core/ObjectImpl.C \
	$(srcdir)/core/comm/ServerListener.C \
	$(srcdir)/core/comm/IIOPCommLayer.C \
	$(srcdir)/core/comm/LocalCommLayer.C \
	$(srcdir)/core/comm/LockPool.C \
	$(srcdir)/core/comm/ConnectionManager.C \
	$(srcdir)/core/comm/LockList.C \
	$(srcdir)/core/comm/FT/FT.C \
	$(srcdir)/core/comm/FT/HeartbeatEnabled.C \
	$(srcdir)/core/comm/FT/AlternateIIOPAddress.C \
	$(srcdir)/core/comm/ReliableOnewayThread.C \
	$(srcdir)/core/comm/RECOVERABLE_COMM_FAILURE.C \
	$(srcdir)/core/comm/TCPConnection.C \
	$(srcdir)/core/comm/OpeningLock.C \
	$(srcdir)/core/comm/MulticastConnection.C \
	$(srcdir)/core/comm/FragmentedMessageHolder.C \
	$(srcdir)/core/comm/Lock.C \
	$(srcdir)/core/comm/iiop/BiDirServiceContext.C \
	$(srcdir)/core/comm/iiop/ServiceContext.C \
	$(srcdir)/core/comm/iiop/IIOPCorbaloc.C \
	$(srcdir)/core/comm/iiop/ServiceContextReader.C \
	$(srcdir)/core/comm/iiop/GIOPLocateReplyMessage.C \
	$(srcdir)/core/comm/iiop/GIOPMessage.C \
	$(srcdir)/core/comm/iiop/Corbaloc.C \
	$(srcdir)/core/comm/iiop/GIOPCancelRequestMessage.C \
	$(srcdir)/core/comm/iiop/ProfileIIOP.C \
	$(srcdir)/core/comm/iiop/AddressingDisposition.C \
	$(srcdir)/core/comm/iiop/RequestId.C \
	$(srcdir)/core/comm/iiop/GIOPLocateRequestMessage.C \
	$(srcdir)/core/comm/iiop/ServiceId.C \
	$(srcdir)/core/comm/iiop/GIOPFragmentedMessage.C \
	$(srcdir)/core/comm/iiop/MsgType.C \
	$(srcdir)/core/comm/iiop/IORAddressingInfo.C \
	$(srcdir)/core/comm/iiop/GIOPReplyMessage.C \
	$(srcdir)/core/comm/iiop/LocateReplyStatusType.C \
	$(srcdir)/core/comm/iiop/GIOPHeader.C \
	$(srcdir)/core/comm/iiop/ObjectKey.C \
	$(srcdir)/core/comm/iiop/ServiceContextList.C \
	$(srcdir)/core/comm/iiop/GIOPFragmentMessage.C \
	$(srcdir)/core/comm/iiop/Version.C \
	$(srcdir)/core/comm/iiop/TargetAddress.C \
	$(srcdir)/core/comm/iiop/ReplyStatusType.C \
	$(srcdir)/core/comm/iiop/InvocationPoliciesContext.C \
	$(srcdir)/core/comm/iiop/UserExceptionEncoder.C \
	$(srcdir)/core/comm/iiop/ListenPoint.C \
	$(srcdir)/core/comm/iiop/GIOPRequestMessage.C \
	$(srcdir)/core/comm/ConnectionState.C \
	$(srcdir)/core/comm/FragmentedMessagesRepository.C \
	$(srcdir)/core/comm/CommunicationLayer.C \
	$(srcdir)/core/comm/CommunicationManager.C \
	$(srcdir)/core/comm/UDPConnection.C \
	$(srcdir)/core/comm/HeartbeatThread.C \
	$(srcdir)/core/comm/ConnectionThread.C \
	$(srcdir)/core/comm/MIOPCommLayer.C \
	$(srcdir)/core/comm/Connection.C \
	$(srcdir)/core/comm/miop/MIOPPacket.C \
	$(srcdir)/core/comm/miop/GroupIIOPProfile.C \
	$(srcdir)/core/comm/miop/GroupInfo.C \
	$(srcdir)/core/comm/miop/ProfileMIOP.C \
	$(srcdir)/core/comm/miop/MIOPCorbaloc.C \
	$(srcdir)/core/comm/ziop/ZIOPMessage.C \
	$(srcdir)/core/compression/CompressionManagerImpl.C \
	$(srcdir)/core/compression/CompressorFactoryImpl.C \
	$(srcdir)/core/compression/CompressorImpl.C \
	$(srcdir)/core/compression/ZlibCompressorImpl.C \
	$(srcdir)/core/goa/GOAImpl.C \
	$(srcdir)/core/goa/MIOPRequest.C \
	$(srcdir)/core/goa/AbstractMIOPRequest.C \
	$(srcdir)/core/ContextImpl.C \
	$(srcdir)/core/AbstractBaseImpl.C \
	$(srcdir)/core/ShutdownThread.C \
	$(srcdir)/core/PolicyContext.C \
	$(srcdir)/core/NamedValueImpl.C \
	$(srcdir)/core/cdr/CDR.C \
	$(srcdir)/core/cdr/PointerCDR.C \
	$(srcdir)/core/cdr/BufferCDR.C \
	$(srcdir)/core/cdr/ChunkCDR.C \
	$(srcdir)/core/cdr/CDRInputStream.C \
	$(srcdir)/core/cdr/IndirectionNode.C \
	$(srcdir)/core/cdr/ContextCDR.C \
	$(srcdir)/core/cdr/ValueTypeInfo.C \
	$(srcdir)/core/cdr/PositionsNode.C \
	$(srcdir)/core/cdr/CDROutputStream.C \
	$(srcdir)/core/cdr/IteratorCDR.C \
	$(srcdir)/core/iop/TaggedProfileReader.C \
	$(srcdir)/core/iop/TaggedComponentReader.C \
	$(srcdir)/core/iop/IOR.C \
	$(srcdir)/core/iop/ProfileMultipleComponents.C \
	$(srcdir)/core/iop/TaggedComponent.C \
	$(srcdir)/core/iop/ORBComponent.C \
	$(srcdir)/core/iop/TaggedProfile.C \
	$(srcdir)/core/DefaultValueRefCountBase.C \
	$(srcdir)/core/messaging/RequestPriorityPolicyImpl.C \
	$(srcdir)/core/messaging/RequestStartTimePolicyImpl.C \
	$(srcdir)/core/messaging/PolicyComponent.C \
	$(srcdir)/core/messaging/RequestEndTimePolicyImpl.C \
	$(srcdir)/core/messaging/QoS.C \
	$(srcdir)/core/messaging/RebindPolicyImpl.C \
	$(srcdir)/core/messaging/RelativeRequestTimeoutPolicyImpl.C \
	$(srcdir)/core/messaging/RelativeRoundtripTimeoutPolicyImpl.C \
	$(srcdir)/core/messaging/QueueOrderPolicyImpl.C \
	$(srcdir)/core/ObjectDelegateImpl.C \
	$(srcdir)/core/PolicyCurrentImpl.C \
	$(srcdir)/core/ExceptionListImpl.C \
	$(srcdir)/core/TIDORB.C \
	$(srcdir)/core/Fixed.C \
	$(srcdir)/core/RequestSeqImpl.C \
	$(srcdir)/core/typecode/TypeCodeImpl.C \
	$(srcdir)/core/typecode/RecursiveTypeCode.C \
	$(srcdir)/core/typecode/StringTypeCode.C \
	$(srcdir)/core/typecode/LocalInterfaceTypeCode.C \
	$(srcdir)/core/typecode/ValueBoxTypeCode.C \
	$(srcdir)/core/typecode/ObjectRefTypeCode.C \
	$(srcdir)/core/typecode/AbstractInterfaceTypeCode.C \
	$(srcdir)/core/typecode/ComplexTypeCode.C \
	$(srcdir)/core/typecode/StructTypeCode.C \
	$(srcdir)/core/typecode/TypeCodeMarshaler.C \
	$(srcdir)/core/typecode/UnionTypeCode.C \
	$(srcdir)/core/typecode/ValueTypeCode.C \
	$(srcdir)/core/typecode/SequenceTypeCode.C \
	$(srcdir)/core/typecode/AliasTypeCode.C \
	$(srcdir)/core/typecode/TypeCodeCache.C \
	$(srcdir)/core/typecode/TypeCodeFactory.C \
	$(srcdir)/core/typecode/ArrayTypeCode.C \
	$(srcdir)/core/typecode/ExceptionTypeCode.C \
	$(srcdir)/core/typecode/FixedTypeCode.C \
	$(srcdir)/core/typecode/EnumTypeCode.C \
	$(srcdir)/core/typecode/WStringTypeCode.C \
	$(srcdir)/core/poa/POAKey.C \
	$(srcdir)/core/poa/ServantBaseImpl.C \
	$(srcdir)/core/poa/AbstractLocalRequest.C \
	$(srcdir)/core/poa/RequestQueue.C \
	$(srcdir)/core/poa/SystemOID.C \
	$(srcdir)/core/poa/ServantDelegate.C \
	$(srcdir)/core/poa/POAManagerConf.C \
	$(srcdir)/core/poa/ExecThread.C \
	$(srcdir)/core/poa/PortableServer.C \
	$(srcdir)/core/poa/LocalLocateRequest.C \
	$(srcdir)/core/poa/LocalRequest.C \
	$(srcdir)/core/poa/CurrentInfo.C \
	$(srcdir)/core/poa/POAImpl.C \
	$(srcdir)/core/poa/OID.C \
	$(srcdir)/core/poa/DynamicImplementationImpl.C \
	$(srcdir)/core/poa/CompletionWaiter.C \
	$(srcdir)/core/poa/policies/RequestProcessingPolicyImpl.C \
	$(srcdir)/core/poa/policies/ServantRetentionPolicyImpl.C \
	$(srcdir)/core/poa/policies/IdUniquenessPolicyImpl.C \
	$(srcdir)/core/poa/policies/ImplicitActivationPolicyImpl.C \
	$(srcdir)/core/poa/policies/LifespanPolicyImpl.C \
	$(srcdir)/core/poa/policies/IdAssignmentPolicyImpl.C \
	$(srcdir)/core/poa/policies/ThreadPolicyImpl.C \
	$(srcdir)/core/poa/QueuedRequest.C \
	$(srcdir)/core/poa/AbstractIIOPRequest.C \
	$(srcdir)/core/poa/ActiveObjectMap.C \
	$(srcdir)/core/poa/ThreadPool.C \
	$(srcdir)/core/poa/CurrentImpl.C \
	$(srcdir)/core/poa/ThreadStateListener.C \
	$(srcdir)/core/poa/IIOPLocateRequest.C \
	$(srcdir)/core/poa/POAManagerImpl.C \
	$(srcdir)/core/poa/IIOPRequest.C \
	$(srcdir)/core/CodecImpl.C \
	$(srcdir)/core/HeartbeatEnabledPolicyImpl.C \
	$(srcdir)/core/ContextListImpl.C \
	$(srcdir)/core/AnyImpl.C \
	$(srcdir)/core/util/Float.C \
	$(srcdir)/core/util/GenericValue.C \
	$(srcdir)/core/util/OperationCompletion.C \
	$(srcdir)/core/util/Long.C \
	$(srcdir)/core/util/Short.C \
	$(srcdir)/core/util/Time.C \
	$(srcdir)/core/util/Octet.C \
	$(srcdir)/core/util/FixedHolder.C \
	$(srcdir)/core/util/InitialReference.C \
	$(srcdir)/core/util/LongLong.C \
	$(srcdir)/core/util/SystemExceptionHolder.C \
	$(srcdir)/core/util/Counter.C \
	$(srcdir)/core/util/LongDouble.C \
	$(srcdir)/core/util/ULong.C \
	$(srcdir)/core/util/ULongLong.C \
	$(srcdir)/core/util/Double.C \
	$(srcdir)/core/util/exceptions/SystemExceptionNames.C \
	$(srcdir)/core/util/exceptions/SystemExceptionType.C \
	$(srcdir)/core/util/exceptions/SystemExceptionEncoder.C \
	$(srcdir)/core/util/CORBAException.C \
	$(srcdir)/core/util/URL.C \
	$(srcdir)/core/util/Corbaname.C \
	$(srcdir)/core/util/UShort.C \
	$(srcdir)/core/PolicyContextManagerImpl.C \
	$(srcdir)/core/NVListImpl.C \
	$(srcdir)/core/ORBServices.C \
	$(srcdir)/core/CodecFactoryImpl.C \
	$(srcdir)/core/SystemExceptionImpl.C \
	$(srcdir)/core/HeartbeatPolicyImpl.C \
	$(srcdir)/core/ValueBaseImpl.C \
	$(srcdir)/core/LocalServerRequest.C \
	$(srcdir)/core/PolicyManagerImpl.C \
	$(srcdir)/core/ConfORB.C \
	$(srcdir)/core/EnvironmentImpl.C \
	$(srcdir)/core/Stub.C \
	$(srcdir)/core/BidirectionalPolicyImpl.C \
	$(srcdir)/core/RequestCounter.C \
	$(srcdir)/core/LocalObject.C \
	$(srcdir)/core/ziop/CompressionEnablingPolicyImpl.C \
	$(srcdir)/core/ziop/CompressionLowValuePolicyImpl.C \
	$(srcdir)/core/ziop/CompressionMinRatioPolicyImpl.C \
	$(srcdir)/core/ziop/CompressorIdLevelListPolicyImpl.C \
	$(srcdir)/core/ziop/Ziop.C \
	$(srcdir)/dynAny/DynAnyBase.C \
	$(srcdir)/dynAny/DynStructImpl.C \
	$(srcdir)/dynAny/DynExceptImpl.C \
	$(srcdir)/dynAny/DynUnionImpl.C \
	$(srcdir)/dynAny/DynAnyFactoryImpl.C \
	$(srcdir)/dynAny/DynAnyImpl.C \
	$(srcdir)/dynAny/DynArrayImpl.C \
	$(srcdir)/dynAny/DynSingleton.C \
	$(srcdir)/dynAny/DynComposite.C \
	$(srcdir)/dynAny/DynValueImpl.C \
	$(srcdir)/dynAny/DynEnumImpl.C \
	$(srcdir)/dynAny/DynFixedImpl.C \
	$(srcdir)/dynAny/DynSequenceImpl.C \
	$(srcdir)/util/Base64Codec.C \
	$(srcdir)/util/Base16Codec.C \
	$(srcdir)/util/Trace.C \
	$(srcdir)/util/TranslateURLEscapes.C \
	$(srcdir)/util/ObjectGroupFactory.C


libTIDorb_la_LIBADD = \
	$(COMPRESSORS_LIB)

libTIDorb_la_LDFLAGS= \
	-L$(top_builddir)/source/TIDorbC/orb/IDL/.libs \
	-release $(VERSION)
