instdir=$(includedir)/TIDThr

inst_HEADERS = \
   config.h \
   Condition.h \
   Counter.h \
   ErrnoStr.h \
   Exception.h \
   HandleT.h \
   Key.h \
   Monitor.h \
   MutexAttr.h \
   Mutex.h \
   RecursiveMutex.h \
   RefCounter.h \
   Runnable.h \
   Synchronized.h \
   ThreadGroup.h \
   ThreadGroupId.h \
   Thread.h \
   ThreadId.h
